--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,9 @@
     "default_title": "Riki's Utils",
     "default_popup": "popup.html"
   },
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
   "permissions": ["cookies", "<all_urls>", "tabs"]
 }
