--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,10 @@
     "scripts": ["background.js"],
     "persistent": false
   },
-  "permissions": ["cookies", "<all_urls>", "tabs"]
+  "options_page": "options.html",
+  "options_ui_comment": {
+    "page": "options.html",
+    "open_in_tab": false
+  },
+  "permissions": ["cookies", "<all_urls>", "tabs", "storage"]
 }
