--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 2,
-  "name": "Riki's Utils",
+  "name": "AutoScout24 Dev Utils",
   "version": "1.1",
   "offline_enabled": true,
   "browser_action": {
-    "default_title": "Riki's Utils",
+    "default_title": "AutoScout24 Dev Utils",
     "default_popup": "popup.html"
   },
   "background": {
@@ -12,5 +12,9 @@
     "persistent": false
   },
   "options_page": "options.html",
-  "permissions": ["cookies", "<all_urls>", "tabs", "storage"]
+  "permissions": ["cookies", "<all_urls>", "tabs", "storage"],
+  "icons": {
+    "16": "icon-16.png",
+    "128": "icon-128.png"
+  }
 }
