--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,10 @@
     "scripts": ["background.js"],
     "persistent": false
   },
+  "content_scripts": [{
+    "matches": ["<all_urls>"],
+    "js": ["content.js"]
+  }],
   "options_page": "options.html",
   "permissions": ["cookies", "<all_urls>", "tabs", "storage", "clipboardWrite"],
   "icons": {
