--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
   },
   "content_scripts": [{
     "matches": ["<all_urls>"],
-    "js": ["content.js"]
+    "js": ["global.js", "content.js"]
   }],
   "options_page": "options.html",
   "permissions": ["cookies", "<all_urls>", "tabs", "storage", "clipboardWrite"],
